add executive team

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -100,8 +100,8 @@
       <p>YSMF was founded by Ms. Jackie Leonard Bomboma, a survivor of teenage pregnancy, together with her daughter Rose Samwel Mayunga with the aim of using their rough past and struggle to find opportunities and achievement stories as a weapon to inspire, empower, motivate, advocate and fight against young mother’s discrimination and stigmas to restore their pathways to desired human life destinies.</p>
 
       <div style="text-align:center;margin:30px 0 50px;">
-        <h2>Our team</h2>
-      </div>      
+        <h2>Board of directors</h2>
+      </div>
 
       <div class="container team-container" style="font-size:18px;color:#777f85;font-weight:400;"> 
         <div class="team-member-card">
@@ -137,6 +137,27 @@
           <div class="team-member-text">
             <div class="team-member-name">Ms. Rose Samwel Mayunga</div>
             <div class="team-member-title">Board Member of YSMF</div>
+          </div>
+        </div>
+      </div>
+
+      <div style="text-align:center;margin:30px 0 50px;">
+        <h2>Executive team</h2>
+      </div>
+
+      <div class="container team-container" style="font-size:18px;color:#777f85;font-weight:400;"> 
+        <div class="team-member-card">
+          <img src="images/dickson.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Mr. Dickson Mngelele</div>
+            <div class="team-member-title">Finance Officer</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/jackie.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Ms. Jackie Leonard Bomboma</div>
+            <div class="team-member-title">Secretary of YSMF Board of Directors</div>
           </div>
         </div>
       </div>
