add executive team

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -147,6 +147,27 @@
 
       <div class="container team-container" style="font-size:18px;color:#777f85;font-weight:400;"> 
         <div class="team-member-card">
+          <img src="images/jackie.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Ms. Jackie Leonard Bomboma</div>
+            <div class="team-member-title">Founder and CEO of YSMF</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/prisila.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Prisila Emily Somboi</div>
+            <div class="team-member-title">Program Officer</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/esther.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Esther Kwai</div>
+            <div class="team-member-title">Secretary of YSMF</div>
+          </div>
+        </div>
+        <div class="team-member-card">
           <img src="images/dickson.png">
           <div class="team-member-text">
             <div class="team-member-name">Mr. Dickson Mngelele</div>
@@ -154,10 +175,10 @@
           </div>
         </div>
         <div class="team-member-card">
-          <img src="images/jackie.png">
+          <img src="images/rose.png">
           <div class="team-member-text">
-            <div class="team-member-name">Ms. Jackie Leonard Bomboma</div>
-            <div class="team-member-title">Secretary of YSMF Board of Directors</div>
+            <div class="team-member-name">Ms. Rose Samwel Mayunga</div>
+            <div class="team-member-title">Co-Founder of YSMF</div>
           </div>
         </div>
       </div>
