--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <form 
           style="grid-column:1/13"
           class="primary-bg contact-form"
-          action="http://www.formpocket.com/f/2nnX1mKwQ"
+          action="https://www.formpocket.com/f/2nnX1mKwQ"
           method="post"
           novalidate>
           <div class="form-group">
