--- a/problem-statement.html
+++ b/problem-statement.html
@@ -105,7 +105,7 @@
       <p>YSMF identifies these young mothers, register them and search various opportunities to connect with vulnerable young mothers and their children. As a Founder, once asked herself “Having experienced the walk on the road most of young mothers are walking today, I have a clear understanding of what testthey are going through, and sometimes I ask myself where could I and my daughter be today if I was not supported by others contribution to our lives?”</p>
     </div>
 
-    <div class="footer" style="background-color:#f5f5f5;">
+    <div class="footer">
       <div class="container footer-container">
         <div>
           <div class="footer-heading">About us</div>
@@ -122,11 +122,11 @@
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-gray.svg"></div>
+        <div><img src="images/logo-grande-white.svg"></div>
       </div>
     </div>
 
-    <div class="footer footer-bottom" style="background-color:#eee;">
+    <div class="footer footer-bottom">
       <div class="container footer-container">
         <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
