--- a/what-we-do.html
+++ b/what-we-do.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Our History - YSMF</title>
+    <title>What we do - YSMF</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -98,6 +98,15 @@
             <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
             <h4 style="margin-bottom:25px;line-height:28px;">Advocacy and awareness on gender based violence and women’s rights</h4>
           </div>
+          <p>
+            Unlike other countries, Tanzania is one of few countries who tend to be blind on teen and young mothers by discriminating them, denies them the right to education which vandalize their dreams and bring them to the future of extremely violence and gender based violence. Teen and young mothers live without family, social or government support yet are denied by the men responsible. They live under maximum poverty because of the types of jobs they get, have no skills to be employed in decent jobs or self employed. Because of their life style, they all live to face all kind of violence.
+          </p>
+          <p>
+            We all know that every woman and girl deserves the opportunity to live a life free from violence and discrimination of all kind that is why Young Strong Mothers Foundation stands strong to advocate and create awareness on Gender Based Violence and women rights to the vulnerable teen and young mothers in Tanzania. We aims at increasing general sensitivity, understanding and knowledge about gender inequality, exchange of ideas, to pass over right information about gender, to display the evidence, fact and raise issues based on gender and women rights  and increase understanding on various issues.
+          </p>
+          <p>
+            Apart from rising up women’s voice on sexual harassment, organizing for unequal pay and women’s political representation, Young Strong Mothers Foundation is raising up for the teen and young mothers right to education, ending discrimination and finding various opportunities for them to live a free, happy and independent life.
+          </p>
         </li>
         <li>
           <div style="display:flex;margin-left:-25px;color:#3c1053;">
@@ -127,7 +136,7 @@
 
     </div>
 
-    <div class="footer" style="background-color:#f5f5f5;">
+    <div class="footer">
       <div class="container footer-container">
         <div>
           <div class="footer-heading">About us</div>
@@ -144,11 +153,11 @@
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-gray.svg"></div>
+        <div><img src="images/logo-grande-white.svg"></div>
       </div>
     </div>
 
-    <div class="footer footer-bottom" style="background-color:#eee;">
+    <div class="footer footer-bottom">
       <div class="container footer-container">
         <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
