--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div id="contact">
+    <!-- <div id="contact">
       <div class="container">
         <h2 style="text-align:center;margin-bottom:30px;">Get in touch</h2>
         <form 
@@ -190,7 +190,7 @@
           <button type="submit" class="btn btn-form">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer">
       <div class="container footer-container">
@@ -209,7 +209,7 @@
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-gray.svg"></div>
+        <div><img src="images/logo-grande-white.svg"></div>
       </div>
     </div>
 
