--- a/get-involved.html
+++ b/get-involved.html
@@ -170,7 +170,7 @@
       <p>1 pen, pencil, book, school bag or uniform can help a girl stay in class.</p>
     </div>
 
-    <div class="footer" style="background-color:#f5f5f5;">
+    <div class="footer">
       <div class="container footer-container">
         <div>
           <div class="footer-heading">About us</div>
@@ -187,11 +187,11 @@
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-gray.svg"></div>
+        <div><img src="images/logo-grande-white.svg"></div>
       </div>
     </div>
 
-    <div class="footer footer-bottom" style="background-color:#eee;">
+    <div class="footer footer-bottom">
       <div class="container footer-container">
         <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
         <div>
