--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <p>To become a home of hope, inspiration and solutions to vulnerable girls, teen mothers and their children within mainland Tanzania.</p>
     </div>
 
-    <div id="contact">
+    <!-- <div id="contact">
       <div class="container">
         <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
         <form 
@@ -167,7 +167,7 @@
           <button type="submit" class="btn btn-form">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer">
       <div class="container footer-container">
@@ -186,7 +186,7 @@
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-gray.svg"></div>
+        <div><img src="images/logo-grande-white.svg"></div>
       </div>
     </div>
 
