--- a/our-history.html
+++ b/our-history.html
@@ -122,7 +122,7 @@
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-gray.svg"></div>
+        <div><img src="images/logo-grande-white.svg"></div>
       </div>
     </div>
 
