--- a/get-involved.html
+++ b/get-involved.html
@@ -96,22 +96,19 @@
 
       <ul>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:10px;">Psychological counselling and motivation</h4>
           </div>
           <p>Teens and young mothers face many challenges beside their age. Living without family, social or government support and yet have no idea of parenthood, have no educations or skills to be employed or self employed. All these and more, make them live under stress, fear, shame and trauma. Psychological counselling and motivation talks help them feel welcomed and ready to start again. That is why we are looking for a psychological counsellors to invest his/her time and skills to offer this support so that teens and young mothers can welcome the opportunities YSMF is finding for them with clear mind.</p>
         </li>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:10px;">Training on new handmade skills</h4>
           </div>
           <p>Teens and young mothers needs various skills which take short period of time and yet can help them gain skills for employment, self employed and business to help them create a source of income to support their children and their basic needs. Apart from tailoring skills, we need more handmade skills to help them stand on their own.</p>
         </li>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:10px;">Design and media</h4>
           </div>
           <p>YSMF is seeking for design and media volunteers who can help us with website maintenance and data updating, brochure and flyer graphic design, social media set up, impact report graphic design and marketing strategy.</p>
