--- a/what-we-do.html
+++ b/what-we-do.html
@@ -94,12 +94,12 @@
 
       <ul>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
-            <h4 style="margin-bottom:25px;line-height:28px;">Advocacy and awareness on gender based violence and women’s rights</h4>
+          <div style="display:flex;color:#3c1053;">
+            <!-- <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i> -->
+            <h4 style="margin-bottom:20px;line-height:28px;">Advocacy and awareness on gender based violence and women’s rights</h4>
           </div>
           <p>
-            Unlike other countries, Tanzania is one of few countries who tend to be blind on teen and young mothers by discriminating them, denies them the right to education which vandalize their dreams and bring them to the future of extremely violence and gender based violence. Teen and young mothers live without family, social or government support yet are denied by the men responsible. They live under maximum poverty because of the types of jobs they get, have no skills to be employed in decent jobs or self employed. Because of their life style, they all live to face all kind of violence.
+            Tanzania is one of the few countries that tends to be blind to teen and young mothers by discriminating them and denying their right to education. This vandalizes their dreams and bring them to the future of extremely violence and gender based violence. Teen and young mothers live without family, social or government support yet are denied by the men responsible. They live under maximum poverty because of the types of jobs they get, have no skills to be employed in decent jobs or self employed. Because of their life style, they all live to face all kind of violence.
           </p>
           <p>
             We all know that every woman and girl deserves the opportunity to live a life free from violence and discrimination of all kind that is why Young Strong Mothers Foundation stands strong to advocate and create awareness on Gender Based Violence and women rights to the vulnerable teen and young mothers in Tanzania. We aims at increasing general sensitivity, understanding and knowledge about gender inequality, exchange of ideas, to pass over right information about gender, to display the evidence, fact and raise issues based on gender and women rights  and increase understanding on various issues.
@@ -109,26 +109,22 @@
           </p>
         </li>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:25px;line-height:28px;">Education empowerment mainly in vocational skills</h4>
           </div>
         </li>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:25px;line-height:28px;">Economic empowerment mainly in entrepreneurship  skills</h4>
           </div>
         </li>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:25px;line-height:28px;">Promoting access to right information for awareness on health issues mainly focusing on mental health support, counselling, and sexual and reproductive health</h4>
           </div>
         </li>
         <li>
-          <div style="display:flex;margin-left:-25px;color:#3c1053;">
-            <i class="fas fa-heart" style="margin-right:10px;margin-top:6px;"></i>
+          <div style="display:flex;color:#3c1053;">
             <h4 style="margin-bottom:25px;line-height:28px;">Child program mainly focusing on child care for children of young mothers</h4>
           </div>
         </li>
