--- a/who-we-are.html
+++ b/who-we-are.html
@@ -91,7 +91,7 @@
 
     <div class="container section">
       
-      <p style="background:#f5f5f5;color:#3c1053;padding:50px;margin-bottom:25px;font-weight:bold;">
+      <p style="background:#f5f5f5;color:#3c1053;padding:50px;margin-bottom:25px;font-weight:bold;font-family: 'Montserrat', sans-serif;">
         We are a home of hope and inspiration for vulnerable young mothers and their children and stand as a bridge, connecting them with opportunities to resilient solutions to achieve desired life destinies.
       </p>
 
