change phone and add board member

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div style="font-size:14px;">
           <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <a style="margin-right:30px;" href="tel:+255 737 235137">+255 737 235137</a>
+          <a style="margin-right:30px;" href="tel:+255 675 250625">+255 675 250625</a>
           <span id="navbar-top-email">
             <i class="fas fa-envelope" style="margin-right:2px;"></i>
             <a href="mailto:info@ysmf.org">info@ysmf.org</a>
@@ -136,6 +136,13 @@
           <img src="images/rose.png">
           <div class="team-member-text">
             <div class="team-member-name">Ms. Rose Samwel Mayunga</div>
+            <div class="team-member-title">Board Member of YSMF</div>
+          </div>
+        </div>
+        <div class="team-member-card">
+          <img src="images/helmina.png">
+          <div class="team-member-text">
+            <div class="team-member-name">Ms. Helmina Msalilwa</div>
             <div class="team-member-title">Board Member of YSMF</div>
           </div>
         </div>
