--- a/get-involved.html
+++ b/get-involved.html
@@ -2,42 +2,77 @@
 <html lang="es">
   <head>
     <title>Get Involved - YSMF</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <link rel="icon" href="images/favicon_32.png" sizes="32x32" type="image/png"> 
-    <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
-    <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
-    <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <link
+      rel="icon"
+      href="images/favicon_32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"
+      integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700"
+      rel="stylesheet"
+    />
+    <link href="./css/main.css" rel="stylesheet" />
+    <link
+      media="screen and (max-width: 991px)"
+      href="./css/mobile.css"
+      rel="stylesheet"
+    />
+    <link
+      media="screen and (min-width: 992px)"
+      href="./css/desktop.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <div class="navbar-top">
       <div class="container">
-        <div style="font-size:14px;">
-          <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <a style="margin-right:30px;" href="tel:+255 675 250625">+255 675 250625</a>
+        <div style="font-size: 14px;">
+          <i class="fas fa-phone" style="margin-right: 2px;"></i>
+          <a style="margin-right: 30px;" href="tel:+255 675 250625"
+            >+255 675 250625</a
+          >
           <span id="navbar-top-email">
-            <i class="fas fa-envelope" style="margin-right:2px;"></i>
+            <i class="fas fa-envelope" style="margin-right: 2px;"></i>
             <a href="mailto:info@ysmf.org">info@ysmf.org</a>
           </span>
         </div>
         <div>
-
-          <a href="https://www.flickr.com/photos/186737460@N06" target="_blank" style="margin-right:30px;"><i class="fab fa-flickr"></i></a>
-          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a
+            href="https://www.flickr.com/photos/186737460@N06"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-flickr"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/www.ysmf.org"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
 
     <div class="navbar">
       <div class="container">
-
         <a href="index.html" id="logo" class="navbar-brand">
-          <img src="images/logo-grande-white.svg" height="60">
+          <img src="images/logo-grande-white.svg" height="60" />
         </a>
 
         <div class="navbar-nav-scroll nav-mobile">
@@ -46,7 +81,9 @@
               <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
+            <a class="nav-item nav-link" href="get-involved.html"
+              >Get involved</a
+            >
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -62,9 +99,13 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="who-we-are.html">Who we are</a>
                 <a class="dropdown-item" href="what-we-do.html">What we do</a>
-                <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="problem-statement.html"
+                  >Problem statement</a
+                >
                 <a class="dropdown-item" href="impact.html">Our impact</a>
-                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
+                <a class="dropdown-item" href="founders-message.html"
+                  >Founder's message</a
+                >
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
@@ -90,59 +131,126 @@
     </div>
 
     <div class="container section">
-      <h3 style="margin-bottom:25px;">Volunteering with YSMF</h3>
-      <p>Young Strong Mothers Foundation (YSMF) stands as a home of hope, solutions and inspiration for vulnerable teens and young mothers aged 11 to 24. We have various programs which give them an opportunity to rebuild their lost dreams and become strong women.</p>
-      <p>YSMF welcomes individuals and organizations who want to join our effort through investing their time, skills or resources to give a second chance to the teen and young mothers registered in YSMF. These are unpaid volunteers positions, 2-10 hours, 2-6 month, rural and urban areas. We need volunteers for various assignments including:</p>
+      <h3 style="margin-bottom: 25px;">Volunteering with YSMF</h3>
+      <p>
+        Young Strong Mothers Foundation (YSMF) stands as a home of hope,
+        solutions and inspiration for vulnerable teens and young mothers aged 11
+        to 24. We have various programs which give them an opportunity to
+        rebuild their lost dreams and become strong women.
+      </p>
+      <p>
+        YSMF welcomes individuals and organizations who want to join our effort
+        through investing their time, skills or resources to give a second
+        chance to the teen and young mothers registered in YSMF. These are
+        unpaid volunteers positions, 2-10 hours, 2-6 month, rural and urban
+        areas. We need volunteers for various assignments including:
+      </p>
 
       <ul>
         <li>
-          <div style="display:flex;color:#3c1053;">
-            <h4 style="margin-bottom:10px;">Psychological counselling and motivation</h4>
+          <div style="display: flex; color: #3c1053;">
+            <h4 style="margin-bottom: 10px;">
+              Psychological counselling and motivation
+            </h4>
           </div>
-          <p>Teens and young mothers face many challenges beside their age. Living without family, social or government support and yet have no idea of parenthood, have no educations or skills to be employed or self employed. All these and more, make them live under stress, fear, shame and trauma. Psychological counselling and motivation talks help them feel welcomed and ready to start again. That is why we are looking for a psychological counsellors to invest his/her time and skills to offer this support so that teens and young mothers can welcome the opportunities YSMF is finding for them with clear mind.</p>
+          <p>
+            Teens and young mothers face many challenges beside their age.
+            Living without family, social or government support and yet have no
+            idea of parenthood, have no educations or skills to be employed or
+            self employed. All these and more, make them live under stress,
+            fear, shame and trauma. Psychological counselling and motivation
+            talks help them feel welcomed and ready to start again. That is why
+            we are looking for a psychological counsellors to invest his/her
+            time and skills to offer this support so that teens and young
+            mothers can welcome the opportunities YSMF is finding for them with
+            clear mind.
+          </p>
         </li>
         <li>
-          <div style="display:flex;color:#3c1053;">
-            <h4 style="margin-bottom:10px;">Training on new handmade skills</h4>
+          <div style="display: flex; color: #3c1053;">
+            <h4 style="margin-bottom: 10px;">
+              Training on new handmade skills
+            </h4>
           </div>
-          <p>Teens and young mothers needs various skills which take short period of time and yet can help them gain skills for employment, self employed and business to help them create a source of income to support their children and their basic needs. Apart from tailoring skills, we need more handmade skills to help them stand on their own.</p>
+          <p>
+            Teens and young mothers needs various skills which take short period
+            of time and yet can help them gain skills for employment, self
+            employed and business to help them create a source of income to
+            support their children and their basic needs. Apart from tailoring
+            skills, we need more handmade skills to help them stand on their
+            own.
+          </p>
         </li>
         <li>
-          <div style="display:flex;color:#3c1053;">
-            <h4 style="margin-bottom:10px;">Design and media</h4>
+          <div style="display: flex; color: #3c1053;">
+            <h4 style="margin-bottom: 10px;">Design and media</h4>
           </div>
-          <p>YSMF is seeking for design and media volunteers who can help us with website maintenance and data updating, brochure and flyer graphic design, social media set up, impact report graphic design and marketing strategy.</p>
+          <p>
+            YSMF is seeking for design and media volunteers who can help us with
+            website maintenance and data updating, brochure and flyer graphic
+            design, social media set up, impact report graphic design and
+            marketing strategy.
+          </p>
         </li>
       </ul>
 
-      <p>If you are interested and have the skills mentioned or any skills that are suitable for teens and young mothers, please apply by filling the form below.</p>
+      <p>
+        If you are interested and have the skills mentioned or any skills that
+        are suitable for teens and young mothers, please apply by filling the
+        form below.
+      </p>
 
       <div id="contact">
         <div class="container">
-          <form 
-            style="grid-column:1/13"
+          <form
+            style="grid-column: 1/13;"
             class="primary-bg contact-form"
-            action="http://www.formpocket.com/f/2nnX1mKwQ"
+            action="https://formpocket.herokuapp.com/f/JQ_czFhjx"
             method="post"
-            novalidate>
+            novalidate
+          >
             <div class="form-group">
               <label for="name">Name</label>
-              <input name="name" type="text" class="form-control" id="name" autocomplete="off">
+              <input
+                name="name"
+                type="text"
+                class="form-control"
+                id="name"
+                autocomplete="off"
+              />
             </div>
 
             <div class="form-group">
               <label for="email">Email</label>
-              <input name="email" type="email" class="form-control" id="email" autocomplete="off">
+              <input
+                name="email"
+                type="email"
+                class="form-control"
+                id="email"
+                autocomplete="off"
+              />
             </div>
 
             <div class="form-group">
               <label for="phone">Phone number</label>
-              <input name="phone" type="text" class="form-control" id="phone" autocomplete="off">
+              <input
+                name="phone"
+                type="text"
+                class="form-control"
+                id="phone"
+                autocomplete="off"
+              />
             </div>
 
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea name="message" class="form-control" id="message" rows="5" autocomplete="off"></textarea>
+              <textarea
+                name="message"
+                class="form-control"
+                id="message"
+                rows="5"
+                autocomplete="off"
+              ></textarea>
             </div>
 
             <div class="popover fade show bs-popover-bottom" id="popover">
@@ -158,13 +266,28 @@
         </div>
       </div>
 
-      <h3 style="margin-bottom:25px;margin-top:50px;">Sponsor a teen, young mother or their children to join school, vocational training institute or college</h3>
+      <h3 style="margin-bottom: 25px; margin-top: 50px;">
+        Sponsor a teen, young mother or their children to join school,
+        vocational training institute or college
+      </h3>
 
-      <p>Teen and young mothers are school dropouts. Most of them didn’t complete their secondary studies and have been kicked out of school. Your donation, contribution and in-kind support will give a second chance to receive an education. <a href="contact.html">Contact us</a> to take action.</p>
+      <p>
+        Teen and young mothers are school dropouts. Most of them didn’t complete
+        their secondary studies and have been kicked out of school. Your
+        donation, contribution and in-kind support will give a second chance to
+        receive an education. <a href="contact.html">Contact us</a> to take
+        action.
+      </p>
 
-      <h3 style="margin-bottom:25px;margin-top:50px;">Contributing education materials for adolescent girls, young mothers and their children in schools, vocational institutes and colleges</h3>
+      <h3 style="margin-bottom: 25px; margin-top: 50px;">
+        Contributing education materials for adolescent girls, young mothers and
+        their children in schools, vocational institutes and colleges
+      </h3>
 
-      <p>1 pen, pencil, book, school bag or uniform can help a girl stay in class.</p>
+      <p>
+        1 pen, pencil, book, school bag or uniform can help a girl stay in
+        class.
+      </p>
     </div>
 
     <div class="footer">
@@ -179,31 +302,55 @@
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
+          <div class="footer-heading">
+            <a href="get-involved.html">Get involved</a>
+          </div>
         </div>
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-white.svg"></div>
+        <div><img src="images/logo-grande-white.svg" /></div>
       </div>
     </div>
 
     <div class="footer footer-bottom">
       <div class="container footer-container">
-        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div id="copyright">
+          Copyright © 2020. Young Strong Mothers Foundation. All rights
+          reserved.
+        </div>
         <div>
-
-          <a href="https://www.flickr.com/photos/186737460@N06" target="_blank" style="margin-right:30px;"><i class="fab fa-flickr"></i></a>
-          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a
+            href="https://www.flickr.com/photos/186737460@N06"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-flickr"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/www.ysmf.org"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/acceptTerms.js"></script>
     <script src="js/desktop-navbar.js"></script>
     <script src="js/mobile-navbar.js"></script>
-
-</body></html>
+  </body>
+</html>
