--- a/contact.html
+++ b/contact.html
@@ -2,41 +2,76 @@
 <html lang="es">
   <head>
     <title>Contact - YSMF</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="images/favicon_32.png" sizes="32x32" type="image/png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
-    <link media="screen and (max-width: 991px)" href="./css/mobile.css" rel="stylesheet">
-    <link media="screen and (min-width: 992px)" href="./css/desktop.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="icon"
+      href="images/favicon_32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700"
+      rel="stylesheet"
+    />
+    <link href="./css/main.css" rel="stylesheet" />
+    <link
+      media="screen and (max-width: 991px)"
+      href="./css/mobile.css"
+      rel="stylesheet"
+    />
+    <link
+      media="screen and (min-width: 992px)"
+      href="./css/desktop.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <div class="navbar-top">
       <div class="container">
-        <div style="font-size:14px;">
-          <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <a style="margin-right:30px;" href="tel:+255 675 250625">+255 675 250625</a>
+        <div style="font-size: 14px;">
+          <i class="fas fa-phone" style="margin-right: 2px;"></i>
+          <a style="margin-right: 30px;" href="tel:+255 675 250625"
+            >+255 675 250625</a
+          >
           <span id="navbar-top-email">
-            <i class="fas fa-envelope" style="margin-right:2px;"></i>
+            <i class="fas fa-envelope" style="margin-right: 2px;"></i>
             <a href="mailto:info@ysmf.org">info@ysmf.org</a>
           </span>
         </div>
         <div>
-
-          <a href="https://www.flickr.com/photos/186737460@N06" target="_blank" style="margin-right:30px;"><i class="fab fa-flickr"></i></a>
-          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a
+            href="https://www.flickr.com/photos/186737460@N06"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-flickr"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/www.ysmf.org"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
 
     <div class="navbar">
       <div class="container">
-
         <a href="index.html" id="logo" class="navbar-brand">
-          <img src="images/logo-grande-white.svg" height="60">
+          <img src="images/logo-grande-white.svg" height="60" />
         </a>
 
         <div class="navbar-nav-scroll nav-mobile">
@@ -45,7 +80,9 @@
               <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
+            <a class="nav-item nav-link" href="get-involved.html"
+              >Get involved</a
+            >
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -61,9 +98,13 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="who-we-are.html">Who we are</a>
                 <a class="dropdown-item" href="what-we-do.html">What we do</a>
-                <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="problem-statement.html"
+                  >Problem statement</a
+                >
                 <a class="dropdown-item" href="impact.html">Our impact</a>
-                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
+                <a class="dropdown-item" href="founders-message.html"
+                  >Founder's message</a
+                >
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
@@ -88,13 +129,13 @@
       </div>
     </div>
 
-    <div class="container grid-12" style="margin:50px auto;">
-      <div class="contact" style="padding:50px;background-color:#2e3e4a;">
+    <div class="container grid-12" style="margin: 50px auto;">
+      <div class="contact" style="padding: 50px; background-color: #2e3e4a;">
         <h2 class="contact-title">Morogoro - Office</h2>
 
-        <div class="contact-text-white" style="margin-top:25px;">
-          <div style="margin-bottom:5px;">
-            <i class="fas fa-map-marker-alt" style="margin-right:10px;"></i>
+        <div class="contact-text-white" style="margin-top: 25px;">
+          <div style="margin-bottom: 5px;">
+            <i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i>
             <b>Address</b>
           </div>
           <div class="contact-text">
@@ -109,19 +150,21 @@
           Young Strong Mothers Foundation (YSMF), PO Box 2416, Kihonda Along Dodoma Road At Pepsi Street Morogoro
         </div> -->
 
-        <div class="contact-text-white" style="margin-top:25px;">
-          <div style="margin-bottom:5px;">
-            <i class="fas fa-phone" style="margin-right:10px;"></i>
+        <div class="contact-text-white" style="margin-top: 25px;">
+          <div style="margin-bottom: 5px;">
+            <i class="fas fa-phone" style="margin-right: 10px;"></i>
             <b>Phone</b>
           </div>
           <div>
-            <a href="tel:+255 746 200 102" class="contact-text">+255 746 200 102</a>
+            <a href="tel:+255 746 200 102" class="contact-text"
+              >+255 746 200 102</a
+            >
           </div>
         </div>
 
-        <div style="margin-top:25px;">
-          <div class="contact-text-white" style="margin-bottom:5px;">
-            <i class="fas fa-envelope" style="margin-right:10px;"></i>
+        <div style="margin-top: 25px;">
+          <div class="contact-text-white" style="margin-bottom: 5px;">
+            <i class="fas fa-envelope" style="margin-right: 10px;"></i>
             <b>Email</b>
           </div>
           <div class="contact-text">
@@ -129,8 +172,8 @@
           </div>
         </div>
 
-        <div style="margin-top:25px;">
-          <div class="contact-text-white" style="margin-bottom:5px;">
+        <div style="margin-top: 25px;">
+          <div class="contact-text-white" style="margin-bottom: 5px;">
             <b>Main contact person</b>
           </div>
           <div class="contact-text">
@@ -143,40 +186,71 @@
             jackiebomboma@gmail.com
           </div>
         </div>
-
       </div>
-      <div class="map" style="padding:0px;background-color:#fff;">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5035.2131895478215!2d37.64663985093233!3d-6.75339009509419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185a5fe7f885be4f%3A0xbf7f7b1d2ffbe205!2sZahanati%20Kihonda%20Kaskazini!5e1!3m2!1sen!2ses!4v1580323579857!5m2!1sen!2ses" width="100%" height="100%" frameborder="0" style="border:0;display:block;min-height:400px;" allowfullscreen=""></iframe>
+      <div class="map" style="padding: 0px; background-color: #fff;">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5035.2131895478215!2d37.64663985093233!3d-6.75339009509419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185a5fe7f885be4f%3A0xbf7f7b1d2ffbe205!2sZahanati%20Kihonda%20Kaskazini!5e1!3m2!1sen!2ses!4v1580323579857!5m2!1sen!2ses"
+          width="100%"
+          height="100%"
+          frameborder="0"
+          style="border: 0; display: block; min-height: 400px;"
+          allowfullscreen=""
+        ></iframe>
       </div>
     </div>
 
     <!-- <div id="contact">
-      <div class="container">
-        <h2 style="text-align:center;margin-bottom:30px;">Get in touch</h2>
-        <form 
-          style="grid-column:1/13"
+      <div class="container section" style="padding: 0;">
+        <h2 style="text-align: center; margin-bottom: 30px;">Get in touch</h2>
+        <form
+          style="grid-column: 1/13;"
           class="primary-bg contact-form"
-          action="http://www.formpocket.com/f/2nnX1mKwQ"
+          action="http://www.formpocket.com/f/xxxx"
           method="post"
-          novalidate>
+          novalidate
+        >
           <div class="form-group">
             <label for="name">Name</label>
-            <input name="name" type="text" class="form-control" id="name" autocomplete="off">
+            <input
+              name="name"
+              type="text"
+              class="form-control"
+              id="name"
+              autocomplete="off"
+            />
           </div>
 
           <div class="form-group">
             <label for="email">Email</label>
-            <input name="email" type="email" class="form-control" id="email" autocomplete="off">
+            <input
+              name="email"
+              type="email"
+              class="form-control"
+              id="email"
+              autocomplete="off"
+            />
           </div>
 
           <div class="form-group">
             <label for="phone">Phone number</label>
-            <input name="phone" type="text" class="form-control" id="phone" autocomplete="off">
+            <input
+              name="phone"
+              type="text"
+              class="form-control"
+              id="phone"
+              autocomplete="off"
+            />
           </div>
 
           <div class="form-group">
             <label for="message">Message</label>
-            <textarea name="message" class="form-control" id="message" rows="5" autocomplete="off"></textarea>
+            <textarea
+              name="message"
+              class="form-control"
+              id="message"
+              rows="5"
+              autocomplete="off"
+            ></textarea>
           </div>
 
           <div class="popover fade show bs-popover-bottom" id="popover">
@@ -204,31 +278,54 @@
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
+          <div class="footer-heading">
+            <a href="get-involved.html">Get involved</a>
+          </div>
         </div>
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-white.svg"></div>
+        <div><img src="images/logo-grande-white.svg" /></div>
       </div>
     </div>
 
     <div class="footer footer-bottom">
       <div class="container footer-container">
-        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div id="copyright">
+          Copyright © 2020. Young Strong Mothers Foundation. All rights
+          reserved.
+        </div>
         <div>
-
-          <a href="https://www.flickr.com/photos/186737460@N06" target="_blank" style="margin-right:30px;"><i class="fab fa-flickr"></i></a>
-          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a
+            href="https://www.flickr.com/photos/186737460@N06"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-flickr"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/www.ysmf.org"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a93f17701c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/a93f17701c.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/acceptTerms.js"></script>
     <script src="js/desktop-navbar.js"></script>
     <script src="js/mobile-navbar.js"></script>
-
-</body></html>
+  </body>
+</html>
