add contact form

--- a/contact.html
+++ b/contact.html
@@ -199,13 +199,13 @@
       </div>
     </div>
 
-    <!-- <div id="contact">
+    <div id="contact">
       <div class="container section" style="padding: 0;">
         <h2 style="text-align: center; margin-bottom: 30px;">Get in touch</h2>
         <form
           style="grid-column: 1/13;"
           class="primary-bg contact-form"
-          action="http://www.formpocket.com/f/xxxx"
+          action="https://formpocket.herokuapp.com/f/JQ_czFhjx"
           method="post"
           novalidate
         >
@@ -264,7 +264,7 @@
           <button type="submit" class="btn btn-form">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <div class="footer">
       <div class="container footer-container">
