--- a/index.html
+++ b/index.html
@@ -1,40 +1,78 @@
-<!DOCTYPE html><html lang="es"><head>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
     <title>Young Strong Mothers Foundation (YSMF)</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <link rel="icon" href="images/favicon_32.png" sizes="32x32" type="image/png"> 
-    <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-    <link href="./css/main.css" rel="stylesheet">
-    <link media="screen and (max-width: 1199px)" href="./css/mobile.css" rel="stylesheet">
-    <link media="screen and (min-width: 1200px)" href="./css/desktop.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <link
+      rel="icon"
+      href="images/favicon_32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"
+      integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700"
+      rel="stylesheet"
+    />
+    <link href="./css/main.css" rel="stylesheet" />
+    <link
+      media="screen and (max-width: 1199px)"
+      href="./css/mobile.css"
+      rel="stylesheet"
+    />
+    <link
+      media="screen and (min-width: 1200px)"
+      href="./css/desktop.css"
+      rel="stylesheet"
+    />
   </head>
   <body id="home">
-
     <div class="navbar-top">
       <div class="container">
-        <div style="font-size:14px;">
-          <i class="fas fa-phone" style="margin-right:2px;"></i>
-          <a style="margin-right:30px;" href="tel:+255 675 250625">+255 675 250625</a>
+        <div style="font-size: 14px;">
+          <i class="fas fa-phone" style="margin-right: 2px;"></i>
+          <a style="margin-right: 30px;" href="tel:+255 675 250625"
+            >+255 675 250625</a
+          >
           <span id="navbar-top-email">
-            <i class="fas fa-envelope" style="margin-right:2px;"></i>
+            <i class="fas fa-envelope" style="margin-right: 2px;"></i>
             <a href="mailto:info@ysmf.org">info@ysmf.org</a>
           </span>
         </div>
         <div>
-          <a href="https://www.flickr.com/photos/186737460@N06" target="_blank" style="margin-right:30px;"><i class="fab fa-flickr"></i></a>
-          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a
+            href="https://www.flickr.com/photos/186737460@N06"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-flickr"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/www.ysmf.org"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
 
     <div class="navbar">
       <div class="container">
-
         <a href="index.html" id="logo" class="navbar-brand">
-          <img src="images/logo-grande-white.svg" height="60">
+          <img src="images/logo-grande-white.svg" height="60" />
         </a>
 
         <div class="navbar-nav-scroll nav-mobile">
@@ -43,7 +81,9 @@
               <span>About us</span>
               <i class="fas fa-caret-down"></i>
             </span>
-            <a class="nav-item nav-link" href="get-involved.html">Get involved</a>
+            <a class="nav-item nav-link" href="get-involved.html"
+              >Get involved</a
+            >
             <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
@@ -59,9 +99,13 @@
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="who-we-are.html">Who we are</a>
                 <a class="dropdown-item" href="what-we-do.html">What we do</a>
-                <a class="dropdown-item" href="problem-statement.html">Problem statement</a>
+                <a class="dropdown-item" href="problem-statement.html"
+                  >Problem statement</a
+                >
                 <a class="dropdown-item" href="impact.html">Our impact</a>
-                <a class="dropdown-item" href="founders-message.html">Founder's message</a>
+                <a class="dropdown-item" href="founders-message.html"
+                  >Founder's message</a
+                >
                 <a class="dropdown-item" href="partners.html">Our partners</a>
               </div>
             </li>
@@ -84,9 +128,15 @@
       <div class="container grid-1">
         <div class="hero-heading">
           <h2>
-            <div style="margin-left:30px;"><span><span>The home</span></span></div>
-            <div><span><span>of hope and</span></span></div>
-            <div style="margin-left:-30px;"><span><span>inspiration</span></span></div>
+            <div style="margin-left: 30px;">
+              <span><span>The home</span></span>
+            </div>
+            <div>
+              <span><span>of hope and</span></span>
+            </div>
+            <div style="margin-left: -30px;">
+              <span><span>inspiration</span></span>
+            </div>
           </h2>
         </div>
       </div>
@@ -96,64 +146,122 @@
       The home of hope and inspiration
     </div>
 
-    <div style="background:#f5f5f5;">
+    <div style="background: #f5f5f5;">
       <div id="about" class="container">
-        <h3 style="margin-bottom:30px;">Keynote speech of founder and CEO Jackie Bomboma at the 2019 Segal Family Foundation Annual Meeting</h3>
+        <h3 style="margin-bottom: 30px;">
+          Keynote speech of founder and CEO Jackie Bomboma at the 2019 Segal
+          Family Foundation Annual Meeting
+        </h3>
         <div class="video-wrapper">
-          <iframe src="https://www.youtube-nocookie.com/embed/uvfRzhPgA8I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe
+            src="https://www.youtube-nocookie.com/embed/uvfRzhPgA8I"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </div>
     </div>
 
     <div class="container" id="founders-preview">
-      <h1 style="text-align:center;margin-bottom:30px;">Founder's message</h1>
+      <h1 style="text-align: center; margin-bottom: 30px;">
+        Founder's message
+      </h1>
 
-      <p id="founders-message-preview" style="margin-bottom:20px;">Imagine a girl, pregnant at the age of 15, denied by the man responsible, kicked out by her family, living on the street without family, social or government support. Having no parenting skills or even idea of motherhood. Having no education or skills to be employed, every where the night finds her, she call it a night. Giving birth alone in the middle of the forest without any medical support – and afterwards, living as a street teenage mother with her child. She then works as a maid in many homes. Sexually abused many times, denied food, beaten, discriminated and denied many opportunities. That was my life 17 years ago have just been denied by the man responsible just like the other men do who impregnate teenage mothers.</p>
+      <p id="founders-message-preview" style="margin-bottom: 20px;">
+        Imagine a girl, pregnant at the age of 15, denied by the man
+        responsible, kicked out by her family, living on the street without
+        family, social or government support. Having no parenting skills or even
+        idea of motherhood. Having no education or skills to be employed, every
+        where the night finds her, she call it a night. Giving birth alone in
+        the middle of the forest without any medical support – and afterwards,
+        living as a street teenage mother with her child. She then works as a
+        maid in many homes. Sexually abused many times, denied food, beaten,
+        discriminated and denied many opportunities. That was my life 17 years
+        ago have just been denied by the man responsible just like the other men
+        do who impregnate teenage mothers.
+      </p>
 
       <div style="text-align: center;">
-        <a href="founders-message.html" class="btn">Continue reading the founder's message</a>
+        <a href="founders-message.html" class="btn"
+          >Continue reading the founder's message</a
+        >
       </div>
     </div>
 
     <div class="vision-container">
       <div id="vision" class="container">
-        <h1 style="text-align:center;margin-bottom:30px;">Our vision</h1>
-        <p>To provide an opportunity for vulnerable young mothers and their children to address their health, social, education, legal and financial needs.</p>
+        <h1 style="text-align: center; margin-bottom: 30px;">Our vision</h1>
+        <p>
+          To provide an opportunity for vulnerable young mothers and their
+          children to address their health, social, education, legal and
+          financial needs.
+        </p>
       </div>
     </div>
 
     <div id="mission" class="container">
-      <h1 style="text-align:center;margin-bottom:30px;">Our mission</h1>
-      <p>To become a home of hope, inspiration and solutions to vulnerable girls, teen mothers and their children within mainland Tanzania.</p>
+      <h1 style="text-align: center; margin-bottom: 30px;">Our mission</h1>
+      <p>
+        To become a home of hope, inspiration and solutions to vulnerable girls,
+        teen mothers and their children within mainland Tanzania.
+      </p>
     </div>
 
-    <!-- <div id="contact">
-      <div class="container">
-        <h2 style="text-align:center;margin-bottom:30px;grid-column:1/13">Contact us</h2>
-        <form 
-          style="grid-column:1/13"
+    <div id="contact">
+      <div class="container section" style="padding: 0;">
+        <h2 style="text-align: center; margin-bottom: 30px; grid-column: 1/13;">
+          Contact us
+        </h2>
+        <form
+          style="grid-column: 1/13;"
           class="primary-bg contact-form"
-          action="https://www.formpocket.com/f/2nnX1mKwQ"
+          action="https://formpocket.herokuapp.com/f/JQ_czFhjx"
           method="post"
-          novalidate>
+          novalidate
+        >
           <div class="form-group">
             <label for="name">Name</label>
-            <input name="name" type="text" class="form-control" id="name" autocomplete="off">
+            <input
+              name="name"
+              type="text"
+              class="form-control"
+              id="name"
+              autocomplete="off"
+            />
           </div>
 
           <div class="form-group">
             <label for="email">Email</label>
-            <input name="email" type="email" class="form-control" id="email" autocomplete="off">
+            <input
+              name="email"
+              type="email"
+              class="form-control"
+              id="email"
+              autocomplete="off"
+            />
           </div>
 
           <div class="form-group">
             <label for="phone">Phone number</label>
-            <input name="phone" type="text" class="form-control" id="phone" autocomplete="off">
+            <input
+              name="phone"
+              type="text"
+              class="form-control"
+              id="phone"
+              autocomplete="off"
+            />
           </div>
 
           <div class="form-group">
             <label for="message">Message</label>
-            <textarea name="message" class="form-control" id="message" rows="5" autocomplete="off"></textarea>
+            <textarea
+              name="message"
+              class="form-control"
+              id="message"
+              rows="5"
+              autocomplete="off"
+            ></textarea>
           </div>
 
           <div class="popover fade show bs-popover-bottom" id="popover">
@@ -167,7 +275,7 @@
           <button type="submit" class="btn btn-form">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <div class="footer">
       <div class="container footer-container">
@@ -181,32 +289,54 @@
           <div><a href="partners.html">Our partners</a></div>
         </div>
         <div>
-          <div class="footer-heading"><a href="get-involved.html">Get involved</a></div>
+          <div class="footer-heading">
+            <a href="get-involved.html">Get involved</a>
+          </div>
         </div>
         <div>
           <div class="footer-heading"><a href="contact.html">Contact</a></div>
         </div>
-        <div><img src="images/logo-grande-white.svg"></div>
+        <div><img src="images/logo-grande-white.svg" /></div>
       </div>
     </div>
 
     <div class="footer footer-bottom">
       <div class="container footer-container">
-        <div id="copyright">Copyright © 2020. Young Strong Mothers Foundation. All rights reserved.</div>
+        <div id="copyright">
+          Copyright © 2020. Young Strong Mothers Foundation. All rights
+          reserved.
+        </div>
         <div>
-
-
-          <a href="https://www.flickr.com/photos/186737460@N06" target="_blank" style="margin-right:30px;"><i class="fab fa-flickr"></i></a>
-          <a href="https://www.facebook.com/www.ysmf.org" target="_blank" style="margin-right:30px;"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://twitter.com/info_ysmf" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a
+            href="https://www.flickr.com/photos/186737460@N06"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-flickr"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/www.ysmf.org"
+            target="_blank"
+            style="margin-right: 30px;"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://twitter.com/info_ysmf" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/a93f17701c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/a93f17701c.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/acceptTerms.js"></script>
     <script src="js/desktop-navbar.js"></script>
     <script src="js/mobile-navbar.js"></script>
-
-</body></html>
+  </body>
+</html>
